fix spacing between cells in table, and minor issues with responsive design

--- a/src/customers-container/components/CustomerForm.css
+++ b/src/customers-container/components/CustomerForm.css
@@ -68,9 +68,6 @@
 .form__actions {
   display: flex;
   flex-direction: row-reverse;
-  position: absolute;
-  bottom: 40px;
-  right: 40px;
 }
 
 .actions__button {
