--- a/src/customers-container/components/CustomersContainer.css
+++ b/src/customers-container/components/CustomersContainer.css
@@ -51,6 +51,19 @@
 }
 
 .button__plusIcon {
-  width: 21px;
-  height: 21px;
+  background: url('../../assets/icon_add_b.svg');
+  display: block;
+  background-size: 21px 21px;
+}
+
+@media (max-width: 700px) {
+  .container {
+    margin: 80px 15% auto;
+  }
+}
+
+@media (max-width: 400px) {
+  .container {
+    margin: 50px 10% auto;
+  }
 }
